Formatting Changes to Big Idea 2

--- a/02.Rmd
+++ b/02.Rmd
@@ -1,4 +1,4 @@
-# Could one company’s job postings lead to more revenue for a competitor? {#Job Posting Insights for Competitive Strategy}
+# Could one company’s job postings lead to more revenue for a competitor? {#JobPostingInsightsforCompetitiveStrategy}
 
 
 #### Keywords
