--- a/index.Rmd
+++ b/index.Rmd
@@ -12,7 +12,7 @@ library(magrittr)
 ```
 
 
-# Welcome to my portfolio!
+# Welcome to my portfolio! {-}
 
 <!-- You can include images saved within your repo... -->
 ```{r hello-world,echo=FALSE,fig.cap='Our Fair School!',fig.align='center',out.width='50%'}
@@ -34,7 +34,7 @@ Online reviews play an incredibly important role in the online purchase path, bu
 
 For hedge funds, competitors, and everybody in between, nuggets of intel in aggregate can represent millions of dollars of forward-looking revenue advantage.  Product launches and expansions are typically reserved to closed-door board meetings, but much of this data must be made public for acquiring the most important resource in development and execution - labor.  Through the aggregation, data analysis, and development of actionable insights, data science has the potential to provide an opportunity to reduce information asymetries and better plan and counter activities through the analysis of jobs postings.  
 
-## About the Webmaster
+## About the Webmaster {-}
 
 Biography
 I am a Co-founder and COO/CPO at Jobwell.co and previously a Senior Manager at the LegalZoom.com Research and Development team and a Google Policy Fellow.  My MBA is from the Yale School of Management and I am working on a Masters in Information and Data Science at UC Berkeley. In 2003, I founded NetLiteracy.org, a technology-based 501(c)3 that has donated 42,000 computers and $14M in services. Our services were highlighted by the FCC in the National Broadband Plan presented to Congress, we received Computerworld's international 21st Century Award for creating "the most innovative application of IT to extend the distribution of digital information and access to Web-Based programs and services to previously underserved populations" and we have been honored by two American Presidents, including one in a private White House ceremony.      
